--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: Arial, sans-serif, Playfair Display;
   text-align: center;
 }
 
@@ -13,7 +13,7 @@ body {
 
 .grid img {
   width: 100%;
-  height: 250px;
+  height: 200px;
   object-fit: cover;
 }
 
