--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body {
   width: 100%;
   height: 200px;
   object-fit: cover;
+  transition: 0.3s;
+.grid img:hover {
+  opacity: 0.8;
+}
 }
 
 nav {
